--- a/templates/index.html
+++ b/templates/index.html
@@ -98,8 +98,8 @@
       <footer class="footer">
             <div class="content has-text-centered">
               <p>
-                <strong>Jagisha </strong><br>
-                <a href="https://github.com/Jagisha">Github</a>.
+                <strong> Developer </strong><br>
+                <a href="https://github.com/">Github</a>.
               </p>
             </div>
           </footer>
